hphp/test/slow/parser/unset_class_constant2.php.expectf
Fatal error: Cannot mutate a class constant in %s/unset_class_constant2.php on line 10
